Fix css reference, styling should apply on all pages now

--- a/templates/branches.j2
+++ b/templates/branches.j2
@@ -4,8 +4,8 @@
     <html>
     <link rel="stylesheet" href="/style.css">
     <head>
-	<title>Accounts</title>
-	<link href="style.css" rel="stylesheet" type="text/css" />
+	<title>Branches</title>
+	<link rel="stylesheet" href="/static/css/style.css">
 
 
 
