--- a/templates/cards.j2
+++ b/templates/cards.j2
@@ -5,7 +5,7 @@
 
     <head>
 	<title>Cards</title>
-	<link href="style.css" rel="stylesheet" type="text/css" />
+	<link rel="stylesheet" href="/static/css/style.css">
 
 
 
