--- a/templates/customer.j2
+++ b/templates/customer.j2
@@ -2,7 +2,7 @@
 <!--Based on templates sourced from https://github.com/osu-cs340-ecampus/flask-starter-app/blob/master/bsg_people_app/templates/edit_people.j2 -->
 
 <!DOCTYPE html>
-<link rel="stylesheet" href="/style.css">
+<link rel="stylesheet" href="/static/css/style.css">
 
 <head>
     <title>Customers</title>
