--- a/templates/main.j2
+++ b/templates/main.j2
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Mohamed Ari & Hoang Tran CS340 Project</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css')}}" />
+    <link rel="stylesheet" href="/static/css/style.css">
 </head>
 <body>
     <h1>Simple Banking Admin Frontend</h1>
