--- a/templates/transaction.j2
+++ b/templates/transaction.j2
@@ -1,4 +1,7 @@
 <!--Based on templates sourced from https://github.com/osu-cs340-ecampus/flask-starter-app/blob/master/bsg_people_app/templates/edit_people.j2 -->
+ 
+ <link rel="stylesheet" href="/static/css/style.css">
+ 
  <caption>Transactions</caption>
     <table border="1" cellpadding="5">
     <thead>
@@ -53,7 +56,6 @@
 					<option value="1">Transfer</option>
 					<option value="2">Withdrawal</option>
 					<option value="3">Deposit</option>
-			
 				</select>
 				<label for="comments">Comments:</label>
 				<input type="text" class="form-control" id="comment" name="phone" commentn="[A-Za-z0-9]{1,}" placeholder="" required> 
