--- a/templates/account.j2
+++ b/templates/account.j2
@@ -2,10 +2,9 @@
     
     <!DOCTYPE html>
     <html>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/static/css/style.css">
     <head>
 	<title>Accounts</title>
-	<link href="style.css" rel="stylesheet" type="text/css" />
 
 
 
