--- a/templates/branch.j2
+++ b/templates/branch.j2
@@ -2,7 +2,7 @@
 
 <head>
     <title>Edit Branch</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="/static/css/style.css">
 </head>
 
 <body>
