--- a/templates/customer.j2
+++ b/templates/customer.j2
@@ -7,68 +7,14 @@
 <head>
     <title>Customers</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
-    <script language="JavaScript">
-        function showform(dowhat) {
-            /*
-             * four DIVS: browse, insert, update, delete
-             * this function sets one visible the others not
-             */
-            if (dowhat == 'insert') {
-                document.getElementById('browse').style.display = 'none';
-                document.getElementById('insert').style.display = 'block';
-                document.getElementById('edit').style.display = 'none';
-                document.getElementById('delete').style.display = 'none';
-            } else if (dowhat == 'update') {
-                document.getElementById('browse').style.display = 'none';
-                document.getElementById('insert').style.display = 'none';
-                document.getElementById('edit').style.display = 'block';
-                document.getElementById('delete').style.display = 'none';
-            } else if (dowhat == 'delete') {
-                document.getElementById('browse').style.display = 'none';
-                document.getElementById('insert').style.display = 'none';
-                document.getElementById('edit').style.display = 'none';
-                document.getElementById('delete').style.display = 'block';
-            } else if (dowhat == 'all') {
-                document.getElementById('browse').style.display = 'block';
-                document.getElementById('insert').style.display = 'block';
-                document.getElementById('edit').style.display = 'block';
-                document.getElementById('delete').style.display = 'block';
-            } else { //by default display browse
-                document.getElementById('browse').style.display = 'block';
-                document.getElementById('insert').style.display = 'none';
-                document.getElementById('edit').style.display = 'none';
-                document.getElementById('delete').style.display = 'none';
-            }
-        }
-
-        function newCustomer() {
-            showform('insert');
-        }
-
-        function updateCustomer(cid) {
-            showform('update');
-        }
-
-        function deleteCustomer(cid) {
-            showform('delete');
-        }
-
-        function browseCustomers() {
-            showform('browse');
-        }
-
-        function showAll() {
-            showform('all');
-        }
     </script>
 </head>
 
 <body>
-    <div id="browse">
+    <div>
         <caption>Customers</caption>
         <table border="1" cellpadding="5">
             <thead>
-
                 <tr>
                     <!-- Iterate through each key in the first entry to get the
                     column name -->
