--- a/templates/card.j2
+++ b/templates/card.j2
@@ -8,7 +8,7 @@
 <body>
     <div>
         <table border="1" cellpadding="5"> 
-            <caption> Editing Cards: </caption>
+            <caption> Add a card: </caption>
             <!-- Access accounts tuple passed from app.py -->
             {% if Cards %}
                 <thead>
