--- a/templates/main.j2
+++ b/templates/main.j2
@@ -6,11 +6,13 @@
 </head>
 <body>
     <h1>Simple Banking Admin Frontend</h1>
-    <p>Links to database tables</p>
+    <h3>Links to database tables</h3>
 </body>
-<td><a href="/account" class="btn btn-default">Accounts</a></td>
-<td><a href="/customer" class="btn btn-default">Customers</a></td>
-<td><a href="/cards" class="btn btn-default">Cards</a></td>
-<td><a href="/branches" class="btn btn-default">Branches</a></td>
+<nav>
+<a href="/account" class="btn btn-default">Accounts</a>
+<a href="/customer" class="btn btn-default">Customers</a>
+<a href="/cards" class="btn btn-default">Cards</a>
+<a href="/branches" class="btn btn-default">Branches</a>
+</nav>
 </html>
 
