--- a/templates/account.j2
+++ b/templates/account.j2
@@ -5,7 +5,12 @@
     <link rel="stylesheet" href="/static/css/style.css">
     <head>
 	<title>Accounts</title>
-
+    <nav>
+<a href="/account" class="btn btn-default">Accounts</a>
+<a href="/customer" class="btn btn-default">Customers</a>
+<a href="/cards" class="btn btn-default">Cards</a>
+<a href="/branches" class="btn btn-default">Branches</a>
+</nav>
 
 
 	</script>
@@ -13,7 +18,7 @@
 
     <body onload="browseAccounts()">
     <div id="browse">
-    <caption>Accounts</caption>
+    <h1>Accounts</h1>
     <table border="1" cellpadding="5">
     <thead> 
     <tr>
@@ -82,6 +87,5 @@
 </div><!--edit-->
 
 
-    <td><a href="/" class="btn btn-default">Return</a></td>
 </body>
 </html>
