--- a/templates/branches.j2
+++ b/templates/branches.j2
@@ -6,7 +6,12 @@
     <head>
 	<title>Branches</title>
 	<link rel="stylesheet" href="/static/css/style.css">
-
+    <nav>
+<a href="/account" class="btn btn-default">Accounts</a>
+<a href="/customer" class="btn btn-default">Customers</a>
+<a href="/cards" class="btn btn-default">Cards</a>
+<a href="/branches" class="btn btn-default">Branches</a>
+</nav>
 
 
 	</script>
@@ -14,7 +19,7 @@
 
     <body onload="browseBranches()">
     <div id="browse">
-    <caption>Branches</caption>
+    <h1>Branches</h1>
     <table border="1" cellpadding="5">
     <thead> 
     <tr>
@@ -73,6 +78,6 @@
     </form>
 
 
-    <td><a href="/" class="btn btn-default">Return</a></td>
+
 </body>
 </html>
