--- a/templates/customer.j2
+++ b/templates/customer.j2
@@ -3,6 +3,12 @@
 
 <!DOCTYPE html>
 <link rel="stylesheet" href="/static/css/style.css">
+<nav>
+<a href="/account" class="btn btn-default">Accounts</a>
+<a href="/customer" class="btn btn-default">Customers</a>
+<a href="/cards" class="btn btn-default">Cards</a>
+<a href="/branches" class="btn btn-default">Branches</a>
+</nav>
 
 <head>
     <title>Customers</title>
@@ -65,7 +71,7 @@
 
 <body>
     <div id="browse">
-        <caption>Customers</caption>
+        <h1>Customers</h1>
         <table border="1" cellpadding="5">
             <thead>
 
@@ -145,7 +151,7 @@
                 <input class="btn" type="button" value="Cancel" onClick="browseCustomers()" style="margin:.5rem;">
             </form>
         </div><!--edit-->
-     <td><a href="/" class="btn btn-default">Return</a></td>
+     
 </body>
 
 </html>
