--- a/templates/customer.j2
+++ b/templates/customer.j2
@@ -71,6 +71,6 @@
             <!-- Create 'Add Customer' button-->
             <input type="submit" value="Add Customer" name="Add_Customer" class="btn btn-primary" style="margin:.5rem;">
         </form>
-
+    <a href="/" class="btn btn-default"><button>Home</button></a>
 </body>
 </html>
