--- a/templates/edit_customers.j2
+++ b/templates/edit_customers.j2
@@ -58,7 +58,7 @@
                     <input type="date" value="{{customer[0].date_of_birth}}" class="form-control" id="date_of_birth" name="date_of_birth" required>
                 </fieldset>
                 <input type="submit" value="Edit Customer" name="Edit_Customer" class="btn btn-primary" style="margin:.5rem;">
-                <a href='/customers'><input class="btn" type="button" value="cancel"></a>
+                <a href='/customer'><input class="btn" type="button" value="Cancel"></a>
             </form>
 
 </html>
