--- a/templates/branches.j2
+++ b/templates/branches.j2
@@ -1,20 +1,19 @@
 <!--Based on templates sourced from https://github.com/osu-cs340-ecampus/flask-starter-app/blob/master/bsg_people_app/templates/edit_people.j2 -->
     
-    <!DOCTYPE html>
-    <html>
-    <link rel="stylesheet" href="/style.css">
-    <head>
-	<title>Branches</title>
-	<link rel="stylesheet" href="/static/css/style.css">
-    <nav>
-<a href="/account" class="btn btn-default">Accounts</a>
-<a href="/customer" class="btn btn-default">Customers</a>
-<a href="/cards" class="btn btn-default">Cards</a>
-<a href="/branches" class="btn btn-default">Branches</a>
+<!DOCTYPE html>
+<html>
+<link rel="stylesheet" href="/style.css">
+<head>
+<title>Branches</title>
+<link rel="stylesheet" href="/static/css/style.css">
+<nav>
+    <a href="/account" class="btn btn-default">Accounts</a>
+    <a href="/customer" class="btn btn-default">Customers</a>
+    <a href="/cards" class="btn btn-default">Cards</a>
+    <a href="/branches" class="btn btn-default">Branches</a>
 </nav>
 
 
-	</script>
 </head>
 
     <body>
@@ -77,7 +76,7 @@
 
         <!-- Create 'Add Branch' and 'Cancel' buttons -->
         <input type="submit" value="Add Branch" name="Add_Branch" class="btn btn-primary" style="margin:.5rem;">
-        <input class="btn" type="button" value="Cancel" onClick="browseBranches()"> 
     </form>
 </body>
+ <a href="/" class="btn btn-default"><button>Home</button></a>
 </html>
